--- a/Rebus.Owin/Rebus.Owin.csproj
+++ b/Rebus.Owin/Rebus.Owin.csproj
@@ -68,7 +68,8 @@
   <ItemGroup>
     <Compile Include="Endpoint.cs" />
     <Compile Include="OwinOptionsConfigurationExtensions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo_Patch.cs" />
+    <None Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RebusWebHost.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +77,9 @@
     <None Include="Rebus.Owin.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>$(ProjectDir)\..\scripts\patch_assemblyinfo.cmd $(ProjectDir)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
