--- a/Rebus.Owin/Rebus.Owin.nuspec
+++ b/Rebus.Owin/Rebus.Owin.nuspec
@@ -14,7 +14,7 @@
     <tags>rebus configuration config http owin rest api</tags>
     <iconUrl>https://github.com/mookid8000/Rebus/raw/master/artwork/little_rebusbus2_copy-200x200.png</iconUrl>
     <dependencies>
-      <dependency id="Rebus" version="2.0.0-b02" />
+      <dependency id="Rebus" version="2.0.1" />
       <dependency id="Microsoft.Owin" version="3.0.1" />
       <dependency id="Microsoft.Owin.Diagnostics" version="3.0.1" />
       <dependency id="Microsoft.Owin.Host.HttpListener" version="3.0.1" />
